--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -81,7 +81,7 @@
         "EXTRA_TEXT": []
     },
     "mojichimera:BloodDebtMod": {
-        "TEXT": ["血债", "", "本牌耗能减少 #b1 。 NL 打出时失去 #b1 点生命。"],
+        "TEXT": ["血债", "", "本牌耗能减少 #b1 。 NL 打出时失去 #b2 点生命。"],
         "EXTRA_TEXT": [" 失去 %d 点生命。 NL "]
     },
     "mojichimera:StrangeMod": {
@@ -157,5 +157,13 @@
     "mojichimera:BiasedMod": {
         "TEXT": ["偏差", "", "本牌数值增加 #b200% 。 NL 下 #b3 回合每回合开始时失去 #b33% 的效果。"],
         "EXTRA_TEXT": [" NL 下 %d 回合每回合开始时失去 %d%% 的效果。"]
+    },
+    "mojichimera:GoldenMod": {
+        "TEXT": ["黄金", "", "打出时获得 #b3(+1) #y金币 。"],
+        "EXTRA_TEXT": [" NL 获得 %s 金币 。"]
+    },
+    "mojichimera:ChimericMod": {
+        "TEXT": ["奇美拉", "", "打出时为所有手牌添加随机 #y词条 。 NL #y消耗 。"],
+        "EXTRA_TEXT": [" NL 为所有手牌添加随机词条 。 NL 消耗 。"]
     }
 }
