--- a/mojichimera/src/main/resources/mojichimeraResources/localization/eng/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/eng/mojichimera-Augment-Strings.json
@@ -153,11 +153,11 @@
         "EXTRA_TEXT": [" NL At the start of next %d turns, lose %d%% of effect."]
     },
     "mojichimera:GoldenMod": {
-        "TEXT": ["Golden", "", "Gains #b3(+1) #yGold when played."],
+        "TEXT": ["Golden", "", "Gains #b3(+2) #yGold when played."],
         "EXTRA_TEXT": [" NL Gain %s Gold."]
     },
     "mojichimera:ChimericMod": {
         "TEXT": ["Chimeric", "", "Adds a random #yAugment to all cards in your hand when played. NL #yExhausts."],
-        "EXTRA_TEXT": [" NL Add a random Augment to all cards in your hand. NL Exhaust."]
+        "EXTRA_TEXT": [" NL Add a random Augment to all cards in your hand. NL Exhaust.", " NL Add a random Augment to all cards in your hand."]
     }
 }
