--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -174,7 +174,7 @@
         "EXTRA_TEXT": [" NL 为所有手牌添加随机词条 。 NL 消耗 。", " NL 为所有手牌添加随机词条 。"]
     },
     "mojichimera:FuelFlameMod": {
-        "TEXT": ["浇油", "", "如果敌人有 #y易伤 状态 ， NL 获得 [E] 并且抽 #b1 张牌。"],
+        "TEXT": ["浇油", "", "造成的伤害和获得的 #y格档 减少 #b20% 。 NL 如果敌人有 #y易伤 状态，获得 [E] 并且抽 #b1 张牌。"],
         "EXTRA_TEXT": [
             " NL 如果敌人有 易伤 状态 ， NL 获得 [E] 并且抽 %d 张牌。",
             " NL 如果敌人有 易伤 状态 ， NL 获得 [E] [E] 并且抽 %d 张牌。",
@@ -182,7 +182,7 @@
             ]
     },
     "mojichimera:PourSaltMod": {
-        "TEXT": ["撒盐", "", "如果敌人有 #y虚弱 状态 ， NL 获得 [E] 并且抽 #b1 张牌。"],
+        "TEXT": ["撒盐", "", "造成的伤害和获得的 #y格档 减少 #b20% 。 NL 如果敌人有 #y虚弱 状态，获得 [E] 并且抽 #b1 张牌。"],
         "EXTRA_TEXT": [
             " NL 如果敌人有 虚弱 状态 ， NL 获得 [E] 并且抽 %d 张牌。",
             " NL 如果敌人有 虚弱 状态 ， NL 获得 [E] [E] 并且抽 %d 张牌。",
@@ -196,5 +196,18 @@
             " NL 你每有一种不同的 充能球 ，抽 %d 张牌。",
             " NL 你每有一种不同的 充能球 ，抽 !M! 张牌。"
             ]
+    },
+    "mojichimera:RefundMod": {
+        "TEXT": ["回馈", "", "打出后返还能量，至多 #b1 。"],
+        "EXTRA_TEXT": [" NL stslib:回馈 %d 。"]
+    },
+    "mojichimera:RebateMod": {
+        "TEXT": ["返现", "", "#y虚无 。 NL 若被 #y消耗 ，获得 #b5(+3) #y金币 。"],
+        "EXTRA_TEXT": [" 虚无 。 NL ", " NL 若被 消耗，获得 %s 金币 。"]
+    },
+    "mojichimera:ImminentMod": {
+        "TEXT": ["急迫", "", "#y虚无 。 NL 若被 #y消耗 ，获得 #b1 点 #y力量 和 #y敏捷 。 NL 源于 #b崩坠 #y六火亡魂 的卡牌 #b迫在眉睫。"],
+        "EXTRA_TEXT": [" 虚无 。 NL ", " NL 若被 消耗，获得 %d 点 力量 和 敏捷 。"],
+        "NOTES": ["hexamod:BurningQuestion"]
     }
 }
