--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Augment-Strings.json
@@ -211,11 +211,11 @@
         "NOTES": ["hexamod:BurningQuestion"]
     },
     "mojichimera:SociableMod": {
-        "TEXT": ["合群", "", "手牌中每有一种同类型牌，伤害和 #y格挡 增加 #b20% 。"],
-        "EXTRA_TEXT": [" NL 手牌中每有一种同类型牌，伤害和 格挡 增加 %d%% 。"]
+        "TEXT": ["合群", "", "手牌中每有一张同类型牌，伤害和 #y格挡 增加 #b20% 。"],
+        "EXTRA_TEXT": [" NL 手牌中每有一张同类型牌，伤害和 格挡 增加 %d%% 。"]
     },
     "mojichimera:UnsociableMod": {
-        "TEXT": ["孤僻", "", "本牌的伤害和 #y格挡 增加 #b100% 。 NL 手牌中每有一种同类型牌，减少 #b25% 。"],
-        "EXTRA_TEXT": [" NL 手牌中每有一种同类型牌，伤害和 格挡 减少 %d%% 。"]
+        "TEXT": ["孤僻", "", "本牌的伤害和 #y格挡 增加 #b100% 。 NL 手牌中每有一张同类型牌，减少当前值的 #b20% 。"],
+        "EXTRA_TEXT": [" NL 手牌中每有一张同类型牌，伤害和 格挡 减少 %d%% 。"]
     }
 }
