--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-UI-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-UI-Strings.json
@@ -1,5 +1,8 @@
 {
     "mojichimera:ModConfigs": {
-        "TEXT": ["mojichimera"]
+        "TEXT": [
+            "mojichimera",
+            "mojichimera × 卡包大师"
+        ]
     }
 }
